--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,17 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "parserOptions": {
+    "project": [
+      "tsconfig.json"
+    ]
+  },
+  "rules": {
+    "prettier/prettier": ["error", {
+      "printWidth": 120,
+      "semi": false,
+      "singleQuote": true,
+      "trailingComma": "none",
+      "tabWidth": 2
+    }]
+  }
 }
