--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dcl/crypto": "^3.4.5",
+    "@dcl/schemas": "^9.9.0",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "decentraland-connect": "^5.2.1",
+    "decentraland-crypto-fetch": "^2.0.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@dcl/eslint-config": "^1.1.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
