--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dcl/crypto": "^3.4.5",
     "@dcl/schemas": "^9.12.0",
+    "@headlessui/react": "^1.7.18",
     "@microsoft/fetch-event-source": "^2.0.1",
     "decentraland-connect": "^6.0.0",
     "decentraland-crypto-fetch": "^2.0.1",
