--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dcl/crypto": "^3.4.5",
     "@dcl/schemas": "^9.12.0",
     "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@microsoft/fetch-event-source": "^2.0.1",
     "decentraland-connect": "^6.0.0",
     "decentraland-crypto-fetch": "^2.0.1",
